fix missing background color in nbt editor

--- a/src/main/resources/style/component/nbt-editor-dialog.css
+++ b/src/main/resources/style/component/nbt-editor-dialog.css
@@ -1,3 +1,7 @@
+* {
+    -color-tree-view-background: #46494b;
+}
+
 .nbt-editor-options {
     -fx-spacing: 3px;
     -fx-padding: 5 0 0 0;
